<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FTC Scorer</string>
    <string name="phoenix_ro_026" translatable="false">Phoenix RO-026</string>
    <string name="phoenix_logo">phoenix logo</string>
    <string name="button_new">New</string>
    <string name="button_list">List</string>
    <string name="score_match">Score Match</string>
    <string name="team_name">Team Name</string>
    <string name="team_code">Team code</string>
    <string name="duck_delivery">Duck Delivery</string>
    <string name="alliance_team_name">Alliance Team Name</string>
    <string name="alliance_team_code">Alliance Team Code</string>
    <string name="autonomous_points">Autonomous Points:</string>
    <string name="freight_in_storage">Freight in Storage</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="freight_in_hub">Freight in Hub</string>
    <string name="parked_in_storage">Parked in Storage</string>
    <string name="fully_parked">Fully Parked</string>
    <string name="driver_controlled_points">Driver Points:</string>
    <string name="parked_in_warehouse">Parked in Warehouse</string>
    <string name="freight_bonus">Freight Bonus</string>
    <string name="team_element_used">Team Element Used</string>
    <string name="freight_in_hub_l1">Freight in Hub L1</string>
    <string name="freight_in_hub_l2">Freight in Hub L2</string>
    <string name="freight_in_hub_l3">Freight in Hub L3</string>
    <string name="freight_in_shared">Freight in Shared</string>
    <string name="endgame_points">Endgame Points:</string>
    <string name="carousel_ducks">Carousel Ducks</string>
    <string name="balanced_shipping_hub">Balanced Shipping Hub</string>
    <string name="parked">Parked</string>
    <string name="capping">Capping</string>
    <string name="leaning_shared_hub">Leaning Shared Hub</string>
    <string name="penalties">Penalties:</string>
    <string name="minor">Minor</string>
    <string name="major">Major</string>
    <string name="total_points">Total Points:</string>
    <string name="element">Element</string>
    <string name="save">Save</string>
    <string name="empty_not_saved">Team details are empty</string>
    <string name="team_red">Team Red</string>
    <string name="team_blue">Team Blue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="storage">in Storage</string>
    <string name="duck_delivery_points">Duck Delivery:</string>
    <string name="freight_in_storage_points">Freight in Storage:</string>
    <string name="freight_in_hub_points">Freight in Hub:</string>
    <string name="freight_bonus_points">Freight Bonus:</string>
    <string name="team_element_used_points">Team Element Used:</string>
    <string name="location">Location:</string>
    <string name="parked_points">Parked:</string>
    <string name="fully_parked_points">Fully Parked:</string>
    <string name="warehouse">in Warehouse</string>
    <string name="edit">Edit</string>
    <string name="freight_in_hub_l1_pts">Freight in Hub L1:</string>
    <string name="freight_in_hub_l2_pts">Freight in Hub L2:</string>
    <string name="freight_in_hub_l3_pts">Freight in Hub L3:</string>
    <string name="freight_in_shared_pts">Freight in Shared:</string>
    <string name="carousel_ducks_pts">Carousel Ducks:</string>
    <string name="balanced_shipping_hub_pts">Balanced Shipping Hub:</string>
    <string name="leaning_shared_hub_pts">Leaning Shared Hub:</string>
    <string name="capping_pts">Capping:</string>
    <string name="minor_pts">Minor:</string>
    <string name="major_pts">Major:</string>
    <string name="fully">Fully</string>
    <string name="partly">Partly</string>
    <string name="delete">Delete</string>
</resources>