<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.FTC_FREIGHTFRENZY_Scorer">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ncc1701a"
        android:text="@string/phoenix_ro_026"
        android:textAlignment="center"
        android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_new"
        style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/button_new"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/button_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_list"
        style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:text="@string/button_list"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_new"
        app:layout_constraintTop_toTopOf="@+id/button_new" />


</androidx.constraintlayout.widget.ConstraintLayout>