<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScorerActiviy">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/text_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/score_match"
                android:textAlignment="center"
                android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="team name"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/team_name"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/text_team_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="team name"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/team_code"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_team_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/text_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/autonomous_points"
                android:textAlignment="center"
                android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_auto_storage_plus"
                    style="@style/text_theme"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/plus"
                    android:textSize="24sp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@+id/switch_duck"
                    app:layout_constraintTop_toBottomOf="@+id/switch_duck"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_auto_hub_plus"
                    style="@style/text_theme"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/plus"
                    android:textSize="24sp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@+id/switch_duck"
                    app:layout_constraintTop_toBottomOf="@+id/button_auto_storage_plus" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_auto_storage_minus"
                    style="@style/text_theme"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/minus"
                    android:textSize="24sp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@+id/button_auto_storage_plus"
                    app:layout_constraintTop_toTopOf="@+id/button_auto_storage_plus"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_auto_hub_minus"
                    style="@style/text_theme"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTintMode="add"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/minus"
                    android:textSize="24sp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@+id/button_auto_storage_plus"
                    app:layout_constraintTop_toTopOf="@+id/button_auto_hub_plus" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_duck"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/duck_delivery"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_parked"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/parked"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_auto_hub_minus" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_parked_fully"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fully_parked"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_parked" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/freight_in_storage"
                    android:textAlignment="center"
                    android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_auto_storage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_auto_storage"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/freight_in_hub"
                    android:textAlignment="center"
                    android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_auto_hub"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_auto_hub"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/text_auto_storage"
                    style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_auto_storage_minus"
                    app:layout_constraintEnd_toStartOf="@+id/button_auto_storage_minus"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/button_auto_storage_minus"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/text_auto_hub"
                    style="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_auto_hub_minus"
                    app:layout_constraintEnd_toEndOf="@+id/text_auto_storage"
                    app:layout_constraintStart_toStartOf="@+id/text_auto_storage"
                    app:layout_constraintTop_toTopOf="@+id/button_auto_hub_minus"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView9"
                style="@style/text_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/driver_controlled_points"
                android:textAlignment="center"
                android:textAppearance="@style/Theme.FTC_FREIGHTFRENZY_Scorer"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>